--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
   
   <title>Frontend Mentor | Crowdfunding product page</title>
 
+  <link rel="stylesheet" href="styles.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+
+  <Header>
+    <div class="flex">
+    <img src="images/logo.svg" alt="">
+    <ul>
+      <li><a href="">About</a></li>
+      <li><a href="">Discover</a></li>
+      <li><a href="">Get Started</a></li>
+    </ul>
+  </div>
+  </Header>
   About
   Discover
   Get Started
