--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
   
   <title>Frontend Mentor | Crowdfunding product page</title>
 
@@ -23,53 +25,128 @@
       <li><a href="">Discover</a></li>
       <li><a href="">Get Started</a></li>
     </ul>
+    <i class="fa-solid fa-bars menu"></i>
   </div>
+
+
   </Header>
-  About
-  Discover
-  Get Started
+  <img src="images/logo-mastercraft.svg" class="master" alt="">
+  <div class="container">
 
-  Mastercraft Bamboo Monitor Riser
-  A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+    <section class="one">
+      <h1> Mastercraft Bamboo Monitor Riser</h1>
+      <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
+      <div class="flex">
+      <button>Back this project</button>
+      <button><img src="images/icon-bookmark.svg" class="bookmark" alt=""><label for="">Bookmark</label></button></div>
+    </section>
 
-  Back this project
-  Bookmark
+    <section class="two">
+      <div class="flex">
 
-  $89,914 of $100,000 backed
-  5,007 total backers
-  56 days left
+        <div>
+         <span class="numbers">$89,914</span>
+         <p> of $100,000 backed</p>
+        </div>
 
-  About this project
+        <div class="line"></div>
 
-  The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-  to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-  your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+        <div>
+          <span class="numbers">5,007</span>
+          <p>total backers</p>
+        </div>
 
-  Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-  to allow notepads, pens, and USB sticks to be stored under the stand.
+        <div class="line"></div>
+
+        <div>
+          <span class="numbers">56</span>
+          <p>days left</p>
+        </div>
+    
+      </div>
+      
+      <div class="loading">
+        <div class="load"></div>
+      </div>
+    </section>
+
+    <section class="three">
+        <h2>About this project</h2>
+        <p class="space"> The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
+          to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
+          your posture and make you more comfortable while at work, helping you stay focused on the task at hand.</p>
+
+          <p >Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
+            to allow notepads, pens, and USB sticks to be stored under the stand.</p>
+
+        <div class="box">
+         <div class="flex">
+          <h2> Bamboo Stand</h2>
+          <p><span class="green">Pledge $25 or more</span></p>
+         </div>
+
+         <p> You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+          you’ll be added to a special Backer member list.</p>
+
+          <div class="flex">
+            <div class="flex2">
+              <span class="numbers">101</span>
+              <p>left</p>
+            </div>
+
+            <button>Select Reward</button>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="flex">
+           <h2> Black Edition Stand</h2>
+           <p><span class="green">Pledge $75 or more</span></p>
+          </div>
+ 
+          <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+            member list. Shipping is included.</p>
+ 
+           <div class="flex">
+             <div class="flex2">
+               <span class="numbers">64</span>
+               <p>left</p>
+             </div>
+ 
+             <button>Select Reward</button>
+           </div>
+         </div>
+
+         <div class="box last">
+          <div class="flex">
+           <h2> Mahogany Special Edition</h2>
+           <p><span class="green">Pledge $200 or more</span></p>
+          </div>
+ 
+          <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+            to our Backer member list. Shipping is included.</p>
+ 
+           <div class="flex">
+             <div class="flex2">
+               <span class="numbers">0</span>
+               <p>left</p>
+             </div>
+ 
+             <button>Out of Stock</button>
+           </div>
+         </div>
+
+    </section>
+  </div>
+
+
   
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-  you’ll be added to a special Backer member list.
-  101 left
-  Select Reward
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-  member list. Shipping is included.
-  64 left
-  Select Reward
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-  to our Backer member list. Shipping is included.
-  0 left
+  
+  
+  <!-- 0 left
   Out of Stock
 
-  <!-- Selection modal start -->
+  <!- Selection modal start ->
 
   Back this project
   Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
@@ -84,11 +161,11 @@
   you’ll be added to a special Backer member list.
   101 left
 
-  <!-- Selected pledge start -->
+  <!- Selected pledge start ->
   Enter your pledge
   $25
   Continue
-  <!-- Selected pledge end -->
+  <!- Selected pledge end ->
 
   Black Edition Stand
   Pledge $75 or more
@@ -96,11 +173,11 @@
   member list. Shipping is included.
   64 left
 
-  <!-- Selected pledge start -->
+  <!- Selected pledge start ->
   Enter your pledge
   $75
   Continue
-  <!-- Selected pledge end -->
+  <!- Selected pledge end ->
 
   Mahogany Special Edition
   Pledge $200 or more
@@ -108,21 +185,21 @@
   to our Backer member list. Shipping is included.
   0 left
 
-  <!-- Selected pledge  start -->
+  <!- Selected pledge  start ->
   Enter your pledge
   $200
   Continue
-  <!-- Selected pledge end -->
+  <!- Selected pledge end ->
 
-  <!-- Selection modal end -->
+  <!- Selection modal end ->
 
-  <!-- Success modal start -->
+  <!- Success modal start ->
 
   Thanks for your support!
   Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
   an email once our campaign is completed.
   Got it!
 
-  <!-- Success modal end -->
+  Success modal end -->
 </body>
 </html>
