--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   </Header>
   <img src="images/logo-mastercraft.svg" class="master" alt="">
+  
   <div class="container">
 
     <section class="one">
@@ -42,7 +43,7 @@
     </section>
 
     <section class="two">
-      <div class="flex">
+      <div class="flex center">
 
         <div>
          <span class="numbers">$89,914</span>
